--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ exceptiongroup==1.0.1
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
+gunicorn==20.1.0
 h11==0.14.0
 idna==3.4
 importlib-metadata==5.0.0
